# UV-Lamp

./: .gitignore  .gitmodules  README.md
Hardware/3D-Model/Print-Models/: 01.stl  02.stl  03.stl  04.stl  05.stl  06.stl  07.stl  08.stl  print-setup.3mf
Hardware/KiCad/UV-Controller/: UV-Controller.kicad_pcb  UV-Controller.kicad_prl  UV-Controller.kicad_pro  UV-Controller.kicad_sch  UV-Controller.pcb3d  fp-info-cache  fp-lib-table  ibom.html  mcu.kicad_sch  sym-lib-table
Hardware/KiCad/UV-LEDs/: UV-LEDs.kicad_pcb  UV-LEDs.kicad_prl  UV-LEDs.kicad_pro  UV-LEDs.kicad_sch  UV-LEDs.pcb3d  fp-info-cache
Hardware/KiCad/UV-Lamp/: UV-Lamp.kicad_pcb  UV-Lamp.kicad_prl  UV-Lamp.kicad_pro  UV-Lamp.kicad_sch  UV-Lamp.pcb3d  fp-info-cache  fp-lib-table  led-driver.kicad_sch  mcu.kicad_sch  power-section.kicad_sch  sym-lib-table
Hardware/Parts/: list.csv
Software/: README.md
Software/UV-Lamp/: CMakeLists.txt  TODO  lv_conf.h  main.c  main.cpp
Software/UV-Lamp/examples/: CMakeLists.txt  LCD_1in69_test.c
Software/UV-Lamp/src/: CMakeLists.txt  definitions.hpp  display.cpp  display.hpp  graphics.cpp  graphics.hpp
Software/UV-Lamp/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
Software/UV-Lamp/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_image1.h
Software/UV-Lamp/ui/screens/: ui_ScreenPowerSetting.c  ui_ScreenTimerSetting.h
Software/test-ui/: CMakeLists.txt  project.info  ui.h
Software/test-ui/components/: ui_comp_hook.h  ui_comp_image1.c
Software/test-ui/screens/: ui_ScreenMain.c  ui_ScreenMain.h  (+2 more)
Software/ui/: SquareLine_Project.sll  SquareLine_Project.spj
(+48 files in other folders)
